Fixed layout bug in language menu

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3539,6 +3539,13 @@ header.marketplace-header {
     margin-right: lines(0.5);
     display: none;
     &:hover { color: $link; }
+    &:before {
+      color: $light-body !important;
+      display: inline-block;
+      margin-right: em(8);
+      padding-top: em(5);
+      content: "|";
+    };
     &:after {
       color: $light-body !important;
       display: inline-block;
